docs: add swagger doc
